markdown visible scrollbar fix on smaller screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -198,6 +198,7 @@ blockquote {
   }
   @include tablet {
     overflow-x: auto; // overflowing tables "fix"
+    overflow-y: hidden;
   }
 
   ol li {
